# flexauth

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.smtp  LICENSE  README.Docker.md  README.md  compose.yaml  docker-compose.yaml  makefile  regexes.yaml  skaffold.template.yaml
.github/workflows/: rust.yml
dashboard/: Dockerfile  package.json
dashboard/app/: layout.tsx  page.tsx
data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-7225185200877544724.wt  collection-2-7225185200877544724.wt  collection-7-7225185200877544724.wt  index-1-7225185200877544724.wt  index-3-7225185200877544724.wt  index-8-7225185200877544724.wt  index-9-7225185200877544724.wt  sizeStorer.wt
data/diagnostic.data/: metrics.2024-03-30T18-13-03Z-00000  metrics.2024-03-30T18-14-54Z-00000  metrics.2024-03-30T18-15-52Z-00000  metrics.2024-03-30T18-17-07Z-00000  metrics.2024-03-30T18-21-43Z-00000  metrics.interim
docs/api/: readme.md
docs/api-docs/: openapi.yaml
docs/backend/: email-system.md  password-protection.md  session-managment  session-managment.md  user-data-protection.md
docs/folder-structure/: readme.md
docs/local-setup/: readme.md
k8s/: flexauth-config-map.yaml  flexauth-service-depl.yaml  mongodb-express-depl.yaml
k8s/local/: flexauth-config-map.yaml  flexauth-service-depl.yaml  mongodb-depl.yaml  mongodb-express-depl.yaml  smtp-depl.yaml
smtp/: main.cf
src/: error.rs  errors.rs  log.rs  main.rs
src/cli/: main.rs
src/config/: db_connection_handler.rs  init.rs  mod.rs  (+1 more)
ui/: package-lock.json  package.json
(+102 files in other folders)
